<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>allan_variance_ros</name>
  <version>0.0.1</version>
  <description>Allan Variance ROS</description>
  <author email="russell@robots.ox.ac.uk">Russell Buchanan</author>
  <maintainer email="russell@robots.ox.ac.uk">Russell Buchanan</maintainer>
  <license>Proprietary</license>
  <url type="repository">https://github.com/shshlei/allan_variance_ros</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
